k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
  namespace: ecommerce
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce-frontend

  template:
    metadata:
      labels:
        app: ecommerce-frontend

    spec:
      containers:
        - name: frontend

          image: 648967983842.dkr.ecr.ap-south-1.amazonaws.com/ecommerce-frontend:2152a69aa3a1644b989fd1e7f26b5193797d9e30

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 20
            periodSeconds: 20
