k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  namespace: ecommerce
spec:
  type: ClusterIP

  selector:
    app: ecommerce-backend

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
