k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
  namespace: ecommerce
spec:
  type: ClusterIP

  selector:
    app: ecommerce-frontend

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
