k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:648967983842:certificate/854757e7-2ecf-4dab-b2cf-762071e0bbcd"

    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb

  rules:
    - host: infocontent.site

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: ecommerce-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix

            backend:
              service:
                name: ecommerce-frontend
                port:
                  number: 80
